# ESP32BuildSystem

./: .clang-format  .gitignore  CMakeLists.txt  README.md  esp-idf.fish
main/: app_main.cpp
src/: CMakeLists.txt  app_main.cpp  sum.cpp  sum.hpp
tests/: CMakeLists.txt  app_main.cpp  sum.cpp
